manifests-openshift/deploy-acmeair-bookingservice-java.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acmeair-bookingservice
spec:
  replicas: 1
  selector:
    matchLabels:
      name: acmeair-booking-deployment
  template:
    metadata:
      labels:
        name: acmeair-booking-deployment
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9080"
    spec:
      containers:
      - name: acmeair-bookingservice-java
        image: docker.io/emanelsabban/acmeair-microsvc:acmeair-bookingservice3-java
        #image: emanelsabban/acmeair-microsvc:acmeair-bookingsvc3
        ports:
          - containerPort: 9080
          - containerPort: 9443
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: 400Mi
            cpu: 1
          requests:
            memory: 400Mi
            cpu: 400m
        readinessProbe:
          httpGet:
            path: /health
            port: 9080
          initialDelaySeconds: 20
          timeoutSeconds: 25
          periodSeconds: 15
        livenessProbe:
          httpGet:
            path: /health
            port: 9080
          initialDelaySeconds: 120
          timeoutSeconds: 25
          periodSeconds: 15
      nodeSelector:
        chosen: "true"
---
apiVersion: v1
kind: Service
metadata:
  name: acmeair-booking-service
spec:
  ports:
    - name: 9080-tcp
      protocol: TCP
      port: 9080
      targetPort: 9080
  selector:
    name: acmeair-booking-deployment
---
apiVersion: v1
kind: Service
metadata:
  name: acmeair-secure-booking-service
spec:
  ports:
    - name: 9443-tcp
      protocol: TCP
      port: 9443
      targetPort: 9443
  selector:
    name: acmeair-booking-deployment
---
##### Booking Database  #####
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    service: acmeair-booking-db
  name: acmeair-booking-db
spec:
  ports:
  - name: "27017"
    port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    name: acmeair-booking-db
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  name: acmeair-booking-db
spec:
  replicas: 1
  selector:
    matchLabels:
      name: acmeair-booking-db
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        name: acmeair-booking-db
    spec:
      volumes:
        - name: acmeair-booking-db-1
          emptyDir: {}
        - name: acmeair-booking-db-2
          emptyDir: {}
      containers:
      - image: docker.io/chrisc66/acmeair-jmeter:mongodb
        name: acmeair-booking-db
        ports:
        - containerPort: 27017
          protocol: TCP
        resources:
          limits:
            memory: 500Mi
            cpu: 2
          requests:
            memory: 500Mi
            cpu: 400m        
        volumeMounts:
          - name: acmeair-booking-db-1
            mountPath: /data/configdb
          - name: acmeair-booking-db-2
            mountPath: /data/db
      restartPolicy: Always
      nodeSelector:
        chosen: "true"
status: {}
