manifests-openshift/acmeair-bookingservice-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: acmeair-booking-route
spec:
  host: acmeair.apps.hurricanes.os.fyre.ibm.com
  path: /booking
  to:
    kind: Service
    name: acmeair-booking-service
